--- a/about.org
+++ b/about.org
@@ -10,7 +10,7 @@ I live by the code: to be and not to seem.
 I am interested in philosophy, maths, programming, programming languages theory,
 and system design. I approach everything through language, engineering and systems.
 
-I have written a [[http://amazon.com/Low-Level-Programming-Assembly-Execution-Architecture/dp/1484224027][book]] about low-level programming for my students; this is a
+I have written a [[https://amazon.com/Low-Level-Programming-Assembly-Execution-Architecture/dp/1484224027][book]] about low-level programming for my students; this is a
 slightly outdated version of the class I was teaching in ITMO university in St.
 Petersburg, Russia. I've spent almost 14 years teaching; I don't do it anymore,
 but you can still check my online course on C hosted on [[https://stepik.org/course/73618][Stepik]] (in Russian).
@@ -25,7 +25,7 @@ I exist best underwater, for now I am certified as AOWD but I am interested in g
 Feel free to drop me a line by [[mailto:igorjirkov@gmail.com][mail]] or in [[https://t.me/igorjirkov][telegram]].
 I speak English, French, German, Russian, and basic Polish.
 
-[[http://paypal.me/igorzhirkov][paypal me]]
+[[https://paypal.me/igorzhirkov][paypal me]]
 
 This blog is named after Mr. Duck (Мистер Утка). He is a snobbish, intellectual, and slightly misanthropic gentleman with a weird world view. He is not my alter ego.
 
